# bookmark-clustering

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  PRODUCT_TRANSFORMATION.md  PROJECT_COMPLETE.md  README.md  README.old.md  SAAS_MODEL.md  STREAMLIT_IMPLEMENTATION.md  app.py  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
bookmark_cli/: __main__.py  categorizer.py  cli.py  config.py  exporter.py  fetcher.py  gemini_client.py  llm_client.py  loader.py  normalizer.py  preview.py  storage.py  test_normalizer.py  utils.py
tests/: test_loader.py
