# bookmark-cli/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-cli"
version = "0.1.0"
description = "A CLI tool for organizing Chrome bookmarks with LLM assistance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",  # Added for .env support
    "pydantic>=2.0.0",  # Added for settings
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "ruff>=0.1.0"]

[project.scripts]
bookmark-cli = "bookmark_cli.__main__:app"